2015-02-16 Howard Butler <howard@hobu.co>
	* src/pj_init.c: Fix #237 warning about initialization 
	ordering due to setlocale

2015-02-16 Howard Butler <howard@hobu.co>
	* nad/Makefile.am nad/Makefile.in and others in nad/: Fix #247 to 
	allow out-of-tree autoconf builds

2014-09-17 Even Rouault <even.rouault@spatialys.com>

	* src/pj_datums.c, src/pj_ellps.c: Add clrk80ign ellipsoid and use it
	in carthage datum def (#245)

2014-09-16  Frank Warmerdam  <warmerdam@pobox.com>

	* Generate 4.9.0 RC2. 

	* nad/epsg: updated with Pulkova 1942(58) reverted, and vertical 
	coordinate system names coming through properly.

	* src/pj_gridinfo.c, pj_apply_vgridshift.c, pj_apply_gridshift.c:
	Fix problems with NTv2 files with improper parent structure (#177).

2014-09-13  Frank Warmerdam  <warmerdam@pobox.com>

	* Generate 4.9.0 release.

2014-19-13 Howard Butler <hobu.inc@gmail.com>
	* CMake: Implement CMake build system for proj.4 #243

2014-09-13  Frank Warmerdam  <warmerdam@pobox.com>

	* src/pj_datums.c: fix spelling of clrk80 in carthage datum def (#245)

2014-19-13 Howard Butler <hobu.inc@gmail.com>
	* pj_gridinfo.c: Don't crash when nad_ctable_init doesn't return
	a ctx. #231

2014-09-13  Frank Warmerdam  <warmerdam@pobox.com>

	* nad/epsg: Updated to EPSG 8.5

2014-19-08 Even Rouault <even.rouault@mines-paris.org>

	* src/pj_gridinfo.c: Make pj_gridinfo_load() thread-safe (#228)

2014-19-08 Howard Butler <hobu.inc@gmail.com>

	* src/pj_init.c: apply fix specified in #229  -- pj_init_plus() with init
	and other parms fails in 4.9.0beta

2014-06-06 Even Rouault <even.rouault@mines-paris.org>

	* src/PJ_omerc.c: mark no_off/no_uoff as used for round-tripping
	pj_init_ctxt()/pj_get_def() (#239)

2014-05-14 Even Rouault <even.rouault@mines-paris.org>

	* nad/epsg: Upgraded to EPSG 8.4

2013-12-09  Frank Warmerdam  <warmerdam@pobox.com>

	* src/PJ_geos.c, testvarious: reverse sense of sweep flag. (#146)

2013-12-05  Frank Warmerdam  <warmerdam@pobox.com>
